--- a/checkboxcss.html
+++ b/checkboxcss.html
@@ -19,6 +19,12 @@ input[type="checkbox"] + label span {
 
 input[type="checkbox"]:checked + label span { content: ""; background:url(image/f.png) ;  height: 50px; width: 50px;   }
 
+
+@media only screen and (max-width: 1200px) {
+}
+
+@media only screen and (max-width: 1023px) {
+    }
 	</style>
 </head>
 <body>
